refactor: update package structure + update cicd

--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -1,4 +1,4 @@
-name: Build Linux
+name: CI Linux
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 jobs:
-  build-linux:
+  ci-linux:
     runs-on: ubuntu-latest
 
     steps:
@@ -53,7 +53,7 @@ jobs:
         working-directory: ./fastzip4j
 
       - name: Build artifact
-        run: mvn clean install -Dgpg.skip=true -Drevision=SNAPSHOT
+        run: mvn clean verify -Dgpg.skip=true
         working-directory: ./fastzip4j
 
       - name: Verify JAR Contents
@@ -66,9 +66,3 @@ jobs:
         working-directory: ./fastzip4j
         run: |
           ls ./src/main/resources/lib
-
-      - name: Upload Go Library Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-go-lib
-          path: fastzip4j/src/main/resources/lib/libfastzip4j.so
