--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -23,11 +23,18 @@ jobs:
         run: go mod tidy
         working-directory: ./fastzip4jlib
 
-      - name: Build Go Lib for macOS
+      - name: Build Go Lib for macOS (amd64)
         run: |
           mkdir -p ../fastzip4j/src/main/resources/lib/
           GOOS=darwin GOARCH=amd64 CGO_ENABLED=1 go build -buildmode=c-shared \
-            -o ../fastzip4j/src/main/resources/lib/libfastzip4j.dylib fastzip4j.go
+            -o ../fastzip4j/src/main/resources/lib/libfastzip4j_amd64.dylib fastzip4j.go
+        working-directory: ./fastzip4jlib
+
+      - name: Build Go Lib for macOS (arm64)
+        run: |
+          mkdir -p ../fastzip4j/src/main/resources/lib/
+          GOOS=darwin GOARCH=arm64 CGO_ENABLED=1 go build -buildmode=c-shared \
+            -o ../fastzip4j/src/main/resources/lib/libfastzip4j_arm64.dylib fastzip4j.go
         working-directory: ./fastzip4jlib
 
       - name: Verify Go Libraries
@@ -47,7 +54,7 @@ jobs:
         working-directory: ./fastzip4j
 
       - name: Build artifact
-        run: mvn clean verify -Dgpg.skip=true
+        run: mvn clean verify -Dgpg.skip=true -Drevision=SNAPSHOT
         working-directory: ./fastzip4j
 
       - name: Verify JAR Contents
