test: add test cases + update api for better control

--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -66,3 +66,7 @@ jobs:
         working-directory: ./fastzip4j
         run: |
           ls ./src/main/resources/lib
+
+      - name: Run tests
+        run: mvn test
+        working-directory: ./fastzip4j
