--- a/.github/workflows/ci-windows.yml
+++ b/.github/workflows/ci-windows.yml
@@ -25,14 +25,14 @@ jobs:
 
       - name: Build Go Lib for Windows
         run: |
-          $env:GOOS="windows"; $env:GOARCH="amd64"; $env:CGO_ENABLED="1"; go build -buildmode=c-shared -o ..\fastzip4j\src\main\resources\lib\libfastzip4j.dll fastzip4j.go
+          $env:GOOS="windows"; $env:GOARCH="amd64"; $env:CGO_ENABLED="1"; go build -buildmode=c-shared -o ..\fastzip4j\src\main\resources\lib\win32-x86-64\libfastzip4j.dll fastzip4j.go
         shell: pwsh
         working-directory: ./fastzip4jlib
 
       - name: Verify Go Libraries
         run: |
           echo "Checking Go libraries in resources directory:"
-          dir ..\fastzip4j\src\main\resources\lib\
+          dir ..\fastzip4j\src\main\resources\lib\win32-x86-64\
         shell: cmd
         working-directory: ./fastzip4jlib
 
