--- a/fastzip4j/pom.xml
+++ b/fastzip4j/pom.xml
@@ -43,6 +43,7 @@
         <central.publishing.maven.plugin.version>0.7.0</central.publishing.maven.plugin.version>
         <maven.gpg.plugin.version>3.2.7</maven.gpg.plugin.version>
         <maven.compiler.version>3.14.0</maven.compiler.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
